fix: updated footer logic to prevent overlapping content

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ html {
 }
 
 :root {
+  --footer-height: 96px;
   line-height: 1.5;
   font-weight: 300;
   font-family: "Space Mono", Courier, monospace;
