--- a/src/routes/Contact/index.css
+++ b/src/routes/Contact/index.css
@@ -2,6 +2,7 @@
   width: 80%;
   max-width: 1200px;
   padding: 1em;
+  padding-bottom: var(--footer-height);
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -85,6 +86,5 @@
 
   .contact-body-content {
     font-size: 1.3rem;
-    margin-bottom: 50px;
   }
 }
