--- a/src/routes/Now/index.css
+++ b/src/routes/Now/index.css
@@ -2,6 +2,7 @@
   width: 80%;
   max-width: 1200px;
   padding: 1em;
+  padding-bottom: var(--footer-height);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -110,7 +111,6 @@
 
   .now-body-content {
     font-size: 1.3rem;
-    margin-bottom: 50px;
   }
   .listening-now > div {
     display: flex;
